--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="stage stagehover"></div>
     <div class="lamp"></div>
-    <div class="show2">
+    <div class="show2" id="">
         <div class="magician"></div>
         <div class="stagemagician">
             <div id="animals" class="rabbit"></div>
